<resources>
    <string name="app_name">没有钱钱</string>
    <string name="activity">Activity</string>
    <string name="service">Service</string>
    <string name="broadcast_receivers">Broadcast Receivers</string>
    <string name="content_provider">Content Provider</string>
    <string name="finish">finish()</string>
    <string name="stop_service">停止服务</string>
    <string name="start_service">启动服务</string>
    <string name="bs">BindService</string>
    <string name="bind">Bind</string>
    <string name="unbind">UnBind</string>
    <string name="s1">StartService</string>
    <string name="okhttp">OkHttp</string>
    <string name="a1">有返回结果</string>
    <string name="a21">隐式启动</string>
    <string name="a32">隐式启动浏览器</string>
    <string name="a22">拨号 10086</string>
    <string name="a23">对话框式活动</string>
    <string name="s2">Activity 的四种启动模式</string>
    <string name="q1">\?</string>
    <string name="n">姓名</string>
    <string name="p">密码</string>
    <string name="pe">putExtra</string>
    <string name="bundle">Bundle</string>
    <string name="textview">TextView</string>
    <string name="http_baidu_com">http://baidu.com</string>
    <string name="ass">使用高权限广播接收器修改有序广播内容</string>
    <string name="fzwx">发送一条标准广播 +额外信息</string>
    <string name="ddasd">使用高权限广播接收器终止广播</string>
    <string name="dtzc">动态注册一个广播接收器</string>
    <string name="sdads">取消注册</string>
    <string name="dhkhd">这是一个对话框主题的活动 并没有完全遮住上个活动</string>
    <string name="ddss">启动这个活动 上个活动只会pause 而启动普通活动还会onstop</string>
    <string name="button">Button</string>
    <string name="standard">standard</string>
    <string name="singletop">singleTop</string>
    <string name="singletask">singleTask</string>
    <string name="singleinstance">singleInstance</string>
    <string name="qw">启动…</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="todo">TODO</string>
    <string name="exit">退出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">icon</string>
</resources>